Took care of voting awk and weight

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -57,8 +57,9 @@ techniques to improve such a system.
 
 
 \section{Background}\label{sec:background}
-In a vote, each voter starts with one vote.\vicki{awkward}
-This vote can be called the voter's \textit{weight} or \textit{voting power}. \vicki{Can we say their weight is one?}
+In a voting scenario, each agent starts with one vote.
+This vote can be called the voter's \textit{weight} or \textit{voting power}, meaning
+each agent starts with a weight of one.
 The more weight a voter has, the more they can swing the vote in their favor.
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy} or a \textit{delegate}.
