Tried to answer why proxy voting is different
Most of this was answered in the paragraph where the comment was made, so I attempted to reword things to make them more clear.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -61,33 +61,35 @@ In a voting scenario, each agent starts with one vote.
 This vote can be called the voter's \textit{weight} or \textit{voting power}, meaning
 each agent starts with a weight of one.
 The more weight a voter has, the more they can swing the vote in their favor.
-\textit{Proxy voting} involves allowing agents to transfer their voting power
+\textit{Proxy voting} involves permitting agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy} or a \textit{delegate}.
-This adds to the voting power of the proxy, increasing its weight.
-By delegating a proxy, the transferring agent, also known as the \textit{delegator},
-loses their ability to directly vote, instead allowing the proxy to affect it on
-their behalf.
+These transferring agents are also known as \textit{inactive voters},
+\textit{delegators} or \textit{delegating agents}, and the proxies can also be called
+\textit{active voters}.
+Transferring voting power adds to the voting power of the proxy, increasing its
+weight by the amount of power transferred to it.
+By delegating a proxy, the transferring agent loses their ability to directly vote,
+instead allowing the proxy to affect it on their behalf.
 In other words, the transferring agent does not vote in an election or other types of
 votes, but rather affects the election vicariously through the proxy to which they
 transferred their power.
-These transferring agents are also known as \textit{inactive voters}, and the proxies
-can also be called \textit{active voters}.
+This allows the delegating agent to skip incurring any costs voting without a proxy
+may cause.
 
-In contrast, \textit{direct voting} requires each agent to vote on their own.
-Proxy voting has a number of advantages over direct voting.
-The most obvious advantage is that it permits delegators to reduce the work
-required of them to participate in a vote by choosing a proxy to perform the work of
-voting for them.
+In contrast, \textit{direct voting} requires each agent to vote on their own, meaning
+each agent must incur the costs of voting.
+As such, proxy voting has a number of advantages over direct voting.
+The most obvious advantage is that it permits delegators to reduce the work and costs
+required to participate in a vote by choosing a proxy to perform the work of voting
+for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when one is ill or fears they may become ill, or when a member's time can be spent
 more efficiently without being physically present for a vote like when attending a
 conference or engaging in active research in some location outside {Washington,~D.C}.
-This is, of course, directly applicable to the House of Representatives, since proxy
-voting would allow them to prevent the spread of disease or avoid whatever other
-emergency triggered the use of proxy voting.
-\vicki{The reader is unclear why proxy voting would make any difference. This needs
-to be clarified early in the paper. We need to understand the rules, as it seems like
-the vote is identical to being present to vote.}
+Not being required to be present while still being able to participate is, of course,
+directly advantageous for members of the House of Representatives, since proxy voting
+would allow them to prevent the spread of disease or avoid whatever other emergency
+triggered the use of proxy voting.
 
 In these cases, proxy voting allows voters to skip incurring the costs while still
 having their voice heard by allowing a proxy to pay the cost once on behalf of all
