Clarified more about welfare

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -113,17 +113,21 @@ determine if proxy voting would even be useful, this study employs a similar tec
 as used in~\cite{Cohensius2017}, which has the voters pass their voting power to the
 proxy that is closest in the preference space without any other strategic reasoning.
 
-The `goodness' of a system here is measured using two primary metrics: the
+The `goodness' of a system here is measured using two primary metrics: 1) the
 \textit{error} of the system, meaning how close the system is to the optimal
-solution, and the total system \textit{welfare}.
-Welfare is a measure of how good a situation or action is for an agent.
+solution, and 2) the total system \textit{welfare}.
+Welfare is a measure of how good, or bad, a situation or action is for an agent.
 For example, an agent not being required to vote in person increases that agent's
 welfare since it makes it easier for the agent to vote.
-\vicki{We need to understand the negatives. The way it is described, it seems to be
-only a good solution.}
+Conversely, if the agent is required to incur all the costs of voting, such as when
+using direct voting, the agent's welfare is lower due to the increased work the agent
+needs to do.
 Total system welfare is the sum of the welfare of all agents in the system.
 An excellent system would have high accuracy and high welfare, while a poor system
 would have low accuracy and low welfare.
+In regard to proxy voting, the excellent system would maximize the use of proxies
+without degrading the accuracy of the system, while the poor would require all
+proxies to vote directly and still have high error.
 
 Proxy voting has been shown to often increase system accuracy when compared to only
 allowing active/willing agents to vote~\cite{Cohensius2017}.
