--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -57,7 +57,10 @@ techniques to improve such a system.
 
 
 \section{Background}\label{sec:background}
-In a voting scenario, each agent starts with one vote.
+In order to understand the analysis performed in this study, we must first understand
+what proxy voting is and how it works.
+
+In a given voting scenario, each agent starts with one vote.
 This vote can be called the voter's \textit{weight} or \textit{voting power}, meaning
 each agent starts with a weight of one.
 The more weight a voter has, the more they can swing the vote in their favor.
@@ -144,10 +147,15 @@ health of other agents.
 As will be discussed in the results section of the thesis,
 % \autoref{ch:results},  % TODO: Uncomment for thesis
 this additional system welfare comes at the cost of some system accuracy in terms of
-the actual preferences of the voters. \vicki{Again, we need to understand the rules
-of proxy voting. Is it that the active voter must vote the same way for all of the
-delegated votes? Is it that the active voter must vote on amendments to the vote,
-    which cannot be known in advance?}
+the actual preferences of the voters.
+% \vicki{Again, we need to understand the rules
+% of proxy voting. Is it that the active voter must vote the same way for all of the
+% delegated votes? Is it that the active voter must vote on amendments to the vote,
+% which cannot be known in advance?}
+% MDH: This is discussed in the second and third paragraph of the Assumptions section.
+%   In this section, I'm trying to give a primer on proxy voting and the generals of
+%   how it works. I've added a quick blurb at the beginning of this section to
+%   clarify on the goals of this section.
 This cost comes about because proxies will likely not vote exactly the same as their
 delegators due to having different preferences.
 This causes information about the delegators' preference to be lost and the system's
