Resolved Future Work

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -167,13 +167,14 @@ sufficient number of agents are unable to vote in person, since it allows the sy
 to recover some lost information by allowing agents to delegate their vote to a proxy
 with a similar preference.
 
-In some cases, the proxy is also able to transfer their own vote, as well as the rest of
-their delegated weight, to yet another proxy.
-This is known as \textit{liquid democracy}, which has its own challenges and advantages.
-Ultimately, the use of liquid democracy is not considered in this study, but since proxy
-voting is a subset of the liquid democracy system, it would likely be possible to
-extend the results of this study to liquid democracy as well.  \vicki{This could be
-described in a future work section, but seems to have no purpose here.}
+% TODO: Move to Future Work section once I have one
+% In some cases, the proxy is also able to transfer their own vote, as well as the rest of
+% their delegated weight, to yet another proxy.
+% This is known as \textit{liquid democracy}, which has its own challenges and advantages.
+% Ultimately, the use of liquid democracy is not considered in this study, but since proxy
+% voting is a subset of the liquid democracy system, it would likely be possible to
+% extend the results of this study to liquid democracy as well.  \vicki{This could be
+% described in a future work section, but seems to have no purpose here.}
 
 There are many ways to represent the votes, or preferences, of agents in a system.
 Once such way is a continuous space model, such as the one used in~\cite{Cohensius2017}.
