Clarified middle values

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -194,10 +194,7 @@ preferences.
         the most preference most against some idea and the rightmost point is the most
         preference most in favor of the same idea.
         Importantly, points towards the center of the space are more ambivalent about
-        the topic than the extremes on either end.
-        \vicki{Are they ambivalent or just prefer a middle value? Suppose we were
-        voting on measures to control immigration. A vote in the middle might not
-        mean I'm ambivalent, but that I see the middle approach as the best.}
+        the topic or prefer a more moderate approach than the extremes on either end.
     }
     \label{fig:system-metric-space}
 \end{figure}
