Clarified liquid democracy

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -241,9 +241,9 @@ central proxy, the system's output is skewed towards the most extreme voters.
 \end{figure}
 
 Previous research has also identified problems with proxy voting.
-\etal{Kling} and \etal{Gölz} all investigated a weakness in liquid democracy dubbed
-`super voters'~\cite{Kling2015,Golz2021}, which are proxies that receive an extremely
-large amount of power, while others gain very little.
+\etal{Kling} and \etal{Gölz} all investigated a weakness in liquid democracy, a
+superset to proxy voting, dubbed `super voters'~\cite{Kling2015,Golz2021}, which are
+proxies that receive an extremely large amount of power, while others gain very little.
 While \etal{Kling} ultimately determined these proxies tend to use their power
 wisely, possibly to avoid estranging those voters who delegate their power to the
 proxy, there can be situations where super voters can be problematic with one-off
