--- a/references/research.bib
+++ b/references/research.bib
@@ -60,26 +60,6 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
   year       = {1972},
 }
 
-@Conference{Zhang2022,
-  author    = {Yuzhe Zhang and Davide Grossi},
-  booktitle = {{Proceedings of the 21st International Conference on Autonomous Agents and Multiagent Systems}},
-  title     = {{Tracking Truth by Weighting Proxies in Liquid Democracy}},
-  year      = {2022},
-  address   = {Richland, SC},
-  month     = {5},
-  pages     = {1482–1490},
-  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-  series    = {AAMAS '22},
-  abstract  = {We study wisdom-of-the-crowd effects in liquid democracy on networks where agents are allowed to apportion parts of their voting weight to different proxies. We show that in this setting---unlike in the standard one where voting weight is delegated in full to only one proxy---it becomes possible to construct delegation structures that optimize the truth-tracking ability of the group. Focusing on group accuracy we contrast this centralized solution with the setting in which agents are free to choose their weighted delegations by greedily trying to maximize their own individual accuracy. While equilibria with weighted delegations may be as bad as with standard delegations, they are never worse and may sometimes be better. To gain further insights into this model we experimentally study quantal response delegation strategies on random networks. We observe that weighted delegations can lead, under specific conditions, to higher group accuracy than simple majority voting.},
-  day       = {9},
-  groups    = {Proxy Voting Examples},
-  isbn      = {9781450392136},
-  keywords  = {epistemic social choice, liquid democracy, weighted delegations},
-  location  = {Virtual Event, New Zealand},
-  pagetotal = {9},
-  url       = {https://dl.acm.org/doi/10.5555/3535850.3536015},
-}
-
 @Article{Miller1969,
   author     = {Miller, James C.},
   title      = {{A program for direct and proxy voting in the legislative process}},
@@ -271,6 +251,58 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   journal   = {Social Choice and Welfare},
   publisher = {Springer},
   year      = {2011},
+}
+
+@InProceedings{Gershtein2019,
+  author    = {Gershtein, Michael and Sarne, David and Aumann, Yonatan},
+  booktitle = {Proceedings of the First International Conference on Distributed Artificial Intelligence},
+  title     = {Approval Voting with Costly Information},
+  doi       = {10.1145/3356464.3357705},
+  isbn      = {9781450376563},
+  location  = {Beijing, China},
+  publisher = {Association for Computing Machinery},
+  series    = {DAI '19},
+  url       = {https://doi.org/10.1145/3356464.3357705},
+  abstract  = {In many approval voting settings voters are a priori uncertain regarding their true preferences, yet can obtain this information if willing to incur some cost. This paper provides a comprehensive analysis of such model focusing in simultaneous and sequential voting. The analysis enables demonstrating that costly preference-related information acquisition changes some inherent model properties. In particular, the introduction of such cost may lead to all sorts of manipulations in the sequential case, resulting in an assortment of examples where the latter is dominated by simultaneous voting and vice versa. This, as opposed to the case where such information is freely available, where it can be proved that the two variants are truthful and equivalent. These findings suggest important implications to policy makers and the designers of voting systems.},
+  address   = {New York, NY, USA},
+  articleno = {5},
+  keywords  = {sequential voting, information acquisition, mechanism design, social welfare, computational social choice, simultaneous voting, approval voting},
+  numpages  = {8},
+  year      = {2019},
+}
+
+@Article{Bulteau2021,
+  author     = {Bulteau, Laurent and Shahaf, Gal and Shapiro, Ehud and Talmon, Nimrod},
+  title      = {Aggregation over Metric Spaces: Proposing and Voting in Elections, Budgeting, and Legislation},
+  doi        = {10.1613/jair.1.12388},
+  issn       = {1076-9757},
+  pages      = {1413–1439},
+  url        = {https://doi.org/10.1613/jair.1.12388},
+  volume     = {70},
+  abstract   = {We present a unifying framework encompassing a plethora of social choice settings. Viewing each social choice setting as voting in a suitable metric space, we offer a general model of social choice over metric spaces, in which—similarly to the spatial model of elections—each voter specifies an ideal element of the metric space. The ideal element acts as a vote, where each voter prefers elements that are closer to her ideal element. But it also acts as a proposal, thus making all participants equal not only as voters but also as proposers. We consider Condorcet aggregation and a continuum of solution concepts, ranging from minimizing the sum of distances to minimizing the maximum distance. We study applications of our abstract model to various social choice settings, including single-winner elections, committee elections, participatory budgeting, and participatory legislation. For each setting, we compare each solution concept to known voting rules and study various properties of the resulting voting rules. Our framework provides expressive aggregation for a broad range of social choice settings while remaining simple for voters; and may enable a unified and integrated implementation for all these settings, as well as unified extensions such as sybil-resiliency, proxy voting, and deliberative decision making.&nbsp;},
+  address    = {El Segundo, CA, USA},
+  issue_date = {May 2021},
+  journal    = {J. Artif. Int. Res.},
+  month      = {may},
+  numpages   = {27},
+  publisher  = {AI Access Foundation},
+  year       = {2021},
+}
+
+@InProceedings{Zhang2022,
+  author    = {Zhang, Yuzhe and Grossi, Davide},
+  booktitle = {Proceedings of the 21st International Conference on Autonomous Agents and Multiagent Systems},
+  title     = {Tracking Truth by Weighting Proxies in Liquid Democracy},
+  isbn      = {9781450392136},
+  location  = {Virtual Event, New Zealand},
+  pages     = {1482–1490},
+  publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+  series    = {AAMAS '22},
+  abstract  = {We study wisdom-of-the-crowd effects in liquid democracy on networks where agents are allowed to apportion parts of their voting weight to different proxies. We show that in this setting---unlike in the standard one where voting weight is delegated in full to only one proxy---it becomes possible to construct delegation structures that optimize the truth-tracking ability of the group. Focusing on group accuracy we contrast this centralized solution with the setting in which agents are free to choose their weighted delegations by greedily trying to maximize their own individual accuracy. While equilibria with weighted delegations may be as bad as with standard delegations, they are never worse and may sometimes be better. To gain further insights into this model we experimentally study quantal response delegation strategies on random networks. We observe that weighted delegations can lead, under specific conditions, to higher group accuracy than simple majority voting.},
+  address   = {Richland, SC},
+  keywords  = {epistemic social choice, liquid democracy, weighted delegations},
+  numpages  = {9},
+  year      = {2022},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
