Provided motivation for candidate mechanisms

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -393,8 +393,9 @@ each preference is treated as a proposal in~\cite{Bulteau2021}.
 Ideally, the voter selected would be the proxy that best represents the voters' opinions
 and would minimize the total distance between its preference and all other voters'
 preferences.
-\vicki{If we have a range space of voting possibilities, why would we need to pick
-the preference of a single proxy? I'm not understanding the motivation.}
+These mechanisms would be most beneficial when a continuous option for a vote does
+not exist in the real world, such as yea or nay votes, or choosing which toppings
+should be ordered on a pizza.
 \begin{itemize}
     \item Median
     \item Instant Runoff, which operates the same as the Average Instant Runoff.
